# WinCpp

./: CMakeLists.txt  README.md
WinCpp/: AppIds.h  CMakeLists.txt  CommandRegistry.cpp  DocumentCollectionLogic.h  DocumentNaming.h  EditorSearch.cpp  EditorSearch.h  EditorSettings.h  EditorSplitDrop.cpp  EditorSplitDrop.h  EditorView.cpp  EditorView.h  EditorWorkspace.cpp  EditorWorkspace.h  IndentLogic.cpp  MainWindow.cpp  MainWindow.h  PathLineParser.cpp  PathLineParser.h  RecentFilesStore.cpp  RecentFilesStore.h  RegexPattern.cpp  RegexPattern.h  SessionState.cpp  SessionState.h  StatusBarModel.cpp  StatusBarModel.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  SyntaxRegistry.cpp  SyntaxRegistry.h  TabBar.cpp  TabBar.h  TabBarLogic.cpp  TabBarLogic.h  ThemeLoader.cpp  TreeFilterLogic.cpp  UiHelpers.cpp  UiHelpers.h  WinCpp.cpp  (+2 more)
WinCpp/app/: MainWindow.cpp  MainWindow.h  MainWindowConstants.h  MainWindowDialogs.cpp  MainWindowDocuments.cpp  MainWindowInternal.cpp  MainWindowInternal.h  MainWindowMessages.cpp  MainWindowSession.cpp
WinCpp/cmake/: Scintilla.cmake
WinCpp/core/: AppIds.h  CommandRegistry.h
WinCpp/editor/: DocumentCollectionLogic.cpp  DocumentNaming.cpp  EditorSearch.cpp  EditorSettings.cpp  EditorView.cpp  EditorView.h  EditorWorkspace.cpp  EditorWorkspace.h  EditorWorkspaceDrag.cpp  EditorWorkspaceTabs.cpp  FoldingLogic.cpp  FoldingLogic.h  IndentLogic.h
WinCpp/platform/: ProcessOutput.cpp  ProcessOutput.h
WinCpp/project/: MainWindowProject.cpp  TreeFilterLogic.h
WinCpp/storage/: ConfigJson.cpp  ConfigJson.h  SessionState.cpp  SessionState.h
WinCpp/syntax/: LICENSE  c.yaml  cmake.yaml  cpp.yaml  json.yaml  xml.yaml
WinCpp/syntax_engine/: RegexPattern.cpp  SyntaxHighlighter.cpp  SyntaxHighlighter.h  SyntaxRegistry.cpp  ThemeLoader.h
WinCpp/tests/: CMakeLists.txt  CommandRegistryTests.cpp  DocumentCollectionLogicTests.cpp  DocumentNamingTests.cpp  EditorSearchTests.cpp  EditorSettingsTests.cpp  EditorSplitDropTests.cpp  EditorViewTests.cpp  EditorWorkspaceTests.cpp  FoldingLogicTests.cpp  IndentLogicTests.cpp  PathLineParserTests.cpp  ProcessOutputTests.cpp  RecentFilesStoreTests.cpp  RegexPatternTests.cpp  SessionStateTests.cpp  StatusBarModelTests.cpp  SyntaxHighlighterTests.cpp  SyntaxRegistryTests.cpp  TabBarLogicTests.cpp  TabBarMessageTests.cpp  TabBarTests.cpp  ThemeLoaderTests.cpp  TreeFilterLogicTests.cpp  UiHelpersTests.cpp  WinCppTestsMain.cpp
WinCpp/tests/fixtures/: corrupt_recent.json  invalid_syntax.yaml
WinCpp/tests/fixtures/colorschemes/: sample.micro
WinCpp/tests/fixtures/syntax/: testlang.yaml  testlang_header.yaml  testlang_signature.yaml
WinCpp/ui/: CommandPalette.cpp  CommandPalette.h  DialogLayout.cpp  DialogLayout.h  MainWindowChrome.cpp  StatusBarModel.cpp  StatusBarModel.h  TabBar.cpp  TabBar.h  TabBarLogic.cpp  UiHelpers.cpp  UiHelpers.h  UiMetrics.cpp  UiMetrics.h  UiTheme.cpp  UiTheme.h
